--- a/www/css/style_new.css
+++ b/www/css/style_new.css
@@ -1050,21 +1050,18 @@ padding:0px 0px 30px 0px; margin:0px 15px 0px 15px; }
 #sidebar .scroll-box ul li.idea { border-left:3px solid #4B9B07; }
 #sidebar .scroll-box ul li.finfo { border-left:3px solid #FFC726; }
 
-/* Sidebar --> Campaings */
-#sidebar #campaigns p { margin:15px 0px 20px 15px; }
-#sidebar #campaigns ul { margin:-8px 0px; padding:0px; }
-#sidebar #campaigns ul li {
+/* Sidebar --> Campaings & Groups*/
+#sidebar #campaigns p, #sidebar #groups p { margin:15px 0px 20px 15px; }
+#sidebar #campaigns ul, #sidebar #groups ul, { margin:-8px 0px; padding:0px; }
+#sidebar #campaigns ul li, #sidebar #groups ul li {
 	/*background:transparent url("../images/gray_dot_line_200.png") bottom no-repeat;*/
 	padding:5px 0px 5px 2px;
 	list-style:none; }
 
-#sidebar #campaigns ul li span { padding:0px 0px 0px 5px; display:block; }
-#sidebar #campaigns ul li.challenges span { border-left:5px solid #D21034; }
-#sidebar #campaigns ul li.ideas span { border-left:5px solid #4B9B07; }
-#sidebar #campaigns ul li.visions span { border-left:5px solid #FFC726; }
+#sidebar #campaigns ul li span, #sidebar #groups ul li span { padding:0px 0px 0px 5px; display:block; }
 #sidebar #campaigns ul li.cmp span,
 #sidebar ul.campaigns li.cmp span { border-left:5px solid #003581; }
-#sidebar #campaigns ul li.grp span { border-left:5px solid #0089CF; }
+#sidebar ul.groups li.grp span { border-left:5px solid #0089CF; }
 
 /* Footer */
 #footer { margin-top:10px; padding:0px 16px 5px 16px; color:#999; }
